@@ -76,6 +76,10 @@ Spectrum TriangleLight::Emit(const Scene &scene,
 		const float u0, const float u1, const float u2, const float u3, const float passThroughEvent,
 		Point *orig, Vector *dir,
 		float *emissionPdfW, float *directPdfA, float *cosThetaAtLight) const {
+	// A safety check to avoid NaN/Inf
+	if ((triangleArea == 0.f) || (meshArea == 0.f))
+		return Spectrum();
+
 	HitPoint hitPoint;
 	// Origin
 	float b0, b1, b2;
@@ -147,6 +151,10 @@ Spectrum TriangleLight::Illuminate(const Scene &scene, const BSDF &bsdf,
 		const float u0, const float u1, const float passThroughEvent,
         Vector *dir, float *distance, float *directPdfW,
 		float *emissionPdfW, float *cosThetaAtLight) const {
+	// A safety check to avoid NaN/Inf
+	if ((triangleArea == 0.f) || (meshArea == 0.f))
+		return Spectrum();
+
 	HitPoint tmpHitPoint;
 	float b0, b1, b2;
 	// Use relevant time data?
@@ -224,6 +232,11 @@ Spectrum TriangleLight::Illuminate(const Scene &scene, const BSDF &bsdf,
 		*directPdfW = invTriangleArea * distanceSquared / fabsf(cosAtLight);
 	}
 
+	if (isnan(*directPdfW) || isinf(*directPdfW)) {
+		cout<<*directPdfW<<"="<<emissionFunc<<"==="<<invTriangleArea<<"="<<distanceSquared<<"==="<<cosAtLight<<"\n";
+	}
+	assert (!isnan(*directPdfW) && !isinf(*directPdfW));
+
 	return lightMaterial->GetEmittedRadiance(tmpHitPoint, invMeshArea) * emissionColor;
 }
 
@@ -250,6 +263,10 @@ bool TriangleLight::IsAlwaysInShadow(const Scene &scene,
 Spectrum TriangleLight::GetRadiance(const HitPoint &hitPoint,
 		float *directPdfA,
 		float *emissionPdfW) const {
+	// A safety check to avoid NaN/Inf
+	if ((triangleArea == 0.f) || (meshArea == 0.f))
+		return Spectrum();
+
 	const float cosOutLight = Dot(hitPoint.shadeN, hitPoint.fixedDir);
 	const SampleableSphericalFunction *emissionFunc = lightMaterial->GetEmissionFunc();
 	// emissionFunc can emit light even backward, this is for compatibility with classic Lux
